[gd_scene load_steps=12 format=2]

[ext_resource path="res://table.png" type="Texture" id=1]
[ext_resource path="res://support.png" type="Texture" id=2]
[ext_resource path="res://place.wav" type="AudioStream" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://play.png" type="Texture" id=5]
[ext_resource path="res://menu.png" type="Texture" id=6]
[ext_resource path="res://Afterworld.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 272.031, 13.9688 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Table" type="RigidBody2D" parent="."]
mass = 0.5

[node name="Sprite" type="Sprite" parent="Table"]
position = Vector2( 0, 32 )
scale = Vector2( 1, 0.86458 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -240 )
current = true

[node name="Supports" type="Node2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="Supports"]

[node name="Support" type="Sprite" parent="Supports/KinematicBody2D"]
position = Vector2( 0, 80 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Supports/KinematicBody2D"]
position = Vector2( 0, 80 )
shape = SubResource( 2 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Supports"]
position = Vector2( 48, 64 )
rotation = 1.5708

[node name="Support" type="Sprite" parent="Supports/KinematicBody2D2"]
position = Vector2( 0, 80 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Supports/KinematicBody2D2"]
position = Vector2( 0, 80 )
shape = SubResource( 2 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="Supports"]
position = Vector2( 112, 64 )
rotation = 1.5708

[node name="Support" type="Sprite" parent="Supports/KinematicBody2D3"]
position = Vector2( 0, 80 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Supports/KinematicBody2D3"]
position = Vector2( 0, 80 )
shape = SubResource( 2 )

[node name="DeathField" type="Area2D" parent="."]
position = Vector2( 0, 512 )
scale = Vector2( 23.52, 1.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathField"]
scale = Vector2( 239.861, 16.353 )
shape = SubResource( 3 )

[node name="StuckTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="PlacePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
margin_left = -512.0
margin_top = -512.0
margin_right = -472.0
margin_bottom = -472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseScreen" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Quit" type="Button" parent="UI/LoseScreen"]
margin_left = 378.0
margin_top = 280.0
margin_right = 646.0
margin_bottom = 318.0
icon = ExtResource( 6 )

[node name="Play" type="Button" parent="UI/LoseScreen"]
margin_left = 378.0
margin_top = 200.0
margin_right = 646.0
margin_bottom = 238.0
icon = ExtResource( 5 )

[node name="Score" type="Label" parent="UI"]
margin_right = 400.0
margin_bottom = 200.0
rect_scale = Vector2( 1, 0.988394 )
custom_fonts/font = SubResource( 5 )
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
